feat: rename exhaustive recall mode to deep
