# openapi/memphant.v1.json
@@ -907,7 +907,7 @@
           "vector",
           "temporal",
           "edge",
-          "exhaustive"
+          "deep"
         ],
         "type": "string"
       },
@@ -1169,7 +1169,7 @@
         "enum": [
           "fast",
           "balanced",
-          "exhaustive"
+          "deep"
         ],
         "type": "string"
       },
